--- a/index.html
+++ b/index.html
@@ -204,18 +204,20 @@ tbody tr:hover .action-btn{opacity:1;visibility:visible;}
 }
 #themeMenu button:hover {background: var(--accent-darker);}
 .flame {
-  display: flex;                /* permet de centrer facilement */
-  justify-content: center;      /* horizontalement */
-  align-items: center;          /* verticalement */
-  font-size: 22px;              /* taille de la flamme */
+  display: inline-flex;          /* 🔄 pour être sur la même ligne que 📝 */
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;               /* taille harmonisée */
   line-height: 1;
+  vertical-align: middle;
   animation: flicker 0.6s infinite alternate,
-             sway 1.2s infinite ease-in-out; /* mouvement latéral doux */
+             sway 1.2s infinite ease-in-out;
   text-shadow:
     0 0 4px rgba(255, 140, 0, 0.8),
     0 0 8px rgba(255, 80, 0, 0.7),
     0 0 12px rgba(255, 30, 0, 0.5);
 }
+
 
 /* Petite flamme pour les dossiers dans l’arborescence */
 .flame-folder {
@@ -229,7 +231,18 @@ tbody tr:hover .action-btn{opacity:1;visibility:visible;}
     0 0 6px rgba(255, 80, 0, 0.7);
   animation: flicker 1s infinite alternate;
 }
-  
+
+.note {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;               /* même taille que 🔥 */
+  vertical-align: middle;
+  margin-left: 4px;              /* petit espace entre 🔥 et 📝 */
+  color: #1565c0;                /* bleu lisible */
+  text-shadow: 0 0 4px rgba(21, 101, 192, 0.5);
+}
+
 
 @keyframes sway {
   0%, 100% { transform: translateX(0); }
@@ -651,11 +664,13 @@ console.log("[Folder] Chemin complet enregistré :", fullPath);
 
   // Charger fichiers CSV/JPG classiques du dossier
   const files = await fetchFolderContents(li.dataset.id);
-  const filtered = files.filter(f => 
-    f.name.toLowerCase().endsWith('.csv') || 
-    f.name.toLowerCase().endsWith('.jpg') || 
-    f.name.toLowerCase().endsWith('.jpeg')
-  );
+const filtered = files.filter(f => 
+  f.name.toLowerCase().endsWith('.csv') || 
+  f.name.toLowerCase().endsWith('.jpg') || 
+  f.name.toLowerCase().endsWith('.jpeg') ||
+  f.name.toLowerCase().endsWith('.json')
+);
+
 
 
 
@@ -675,18 +690,21 @@ scanSiteHotDays(siteId).then(map => {
   hotDaysMap = map;
   console.log(`[CACHE] 🔥 ${Object.keys(hotDaysMap).length} jours chauds détectés et chargés pour ${siteLi.querySelector(".folder-name")?.textContent}`);
 
-  // 🪄 Rafraîchir seulement les flammes dans le tableau actuel
-  document.querySelectorAll('#csvTable tbody tr').forEach(tr => {
-    const nameCell = tr.cells[3]; // colonne Nom du fichier
-    const flameCell = tr.cells[1]; // colonne flamme
-    if (!nameCell || !flameCell) return;
+// 🪄 Rafraîchir seulement les flammes dans le tableau actuel sans supprimer les notes 📝
+document.querySelectorAll('#csvTable tbody tr').forEach(tr => {
+  const nameCell = tr.cells[3];
+  const flameCell = tr.cells[1];
+  if (!nameCell || !flameCell) return;
 
-    const fname = nameCell.textContent.trim();
-    const m = fname.match(/(\d{8})\.csv$/i);
-    if (m && hotDaysMap[m[1]]) {
-      flameCell.innerHTML = `<span class="flame" title="Brûleur actif ce jour-là">🔥</span>`;
-    }
-  });
+  const fname = nameCell.textContent.trim();
+  const m = fname.match(/(\d{8})\.csv$/i);
+  if (m && hotDaysMap[m[1]]) {
+    const hadNote = flameCell.innerHTML.includes("📝");
+    flameCell.innerHTML = `<span class="flame" title="Brûleur actif ce jour-là">🔥</span>`;
+    if (hadNote) flameCell.innerHTML += ` <span class="note" title="Note associée">📝</span>`;
+  }
+});
+
 });
 
 } else if (siteId && Object.keys(hotDaysMap).length === 0) {
@@ -724,7 +742,8 @@ if (Object.keys(hotDaysMap).length > 0) {
 
 
 
-function displayFiles(files, folderName){
+async function displayFiles(files, folderName){
+
   const tbody=document.querySelector('#csvTable tbody');
   const downloadBtn=document.getElementById('downloadFolderBtn');
   tbody.innerHTML='';
@@ -734,12 +753,67 @@ function displayFiles(files, folderName){
     downloadBtn.style.display="none";
     return;
   }
+  
 
   downloadBtn.style.display="inline-block";
 
-  for(const f of files){
+downloadBtn.style.display="inline-block";
+
+// 🔍 Prépare la liste des dates ayant un JSON "actif"
+const jsonDates = new Set();
+
+await Promise.all(files
+  .filter(f => f.name.toLowerCase().endsWith(".json"))
+  .map(async (file) => {
+    const m = file.name.match(/(\d{8})/);
+    if (!m) return;
+
+    try {
+      const res = await fetch(
+        `https://smes21540.netlify.app/.netlify/functions/drive?id=${file.id}&name=${encodeURIComponent(file.name)}&site=Smes_Acces`
+      );
+      if (!res.ok) return;
+      const text = await res.text();
+
+try {
+  const data = JSON.parse(text);
+  if (data?.[0]?.status?.toLowerCase() === "active") {
+    jsonDates.add(m[1]);
+  }
+} catch (e) {
+  // Si le JSON n'est pas bien formé, on ignore sans planter
+  console.warn("⚠️ JSON mal formé :", file.name);
+}
+
+    } catch (err) {
+      console.warn("Erreur lecture JSON :", file.name, err);
+    }
+  })
+);
+
+
+// ➕ Helpers pour ajouter sans écraser
+function addFlame(cell){
+  if (!cell.innerHTML.includes("🔥")) {
+    cell.innerHTML += (cell.innerHTML ? " " : "") + `<span class="flame" title="Brûleur actif ce jour-là">🔥</span>`;
+  }
+}
+function addNote(cell){
+  if (!cell.innerHTML.includes("📝")) {
+    cell.innerHTML += (cell.innerHTML ? " " : "") + `<span class="note" title="Note associée">📝</span>`;
+  }
+}
+
+
+
+
+for(const f of files){
+    // ❌ On n'affiche pas les .json : ils servent juste à poser 📝
+    if (f.name.toLowerCase().endsWith(".json")) continue;
+
     // Date
     let date='';
+
     const m=f.name.match(/(\d{8})\.csv$/i);
     if(m){ date=`${m[1].slice(0,4)}-${m[1].slice(4,6)}-${m[1].slice(6,8)}`; }
     else if(/\.(jpg|jpeg)$/i.test(f.name)){
@@ -758,23 +832,26 @@ tdFlame.textContent = "";
 
     
 
-    // 🔥 Application flamme si le fichier correspond à un jour chaud
+// 🔥 Application flamme si le fichier correspond à un jour chaud
 const match = f.name.match(/(\d{8})\.csv$/i);
 if (match) {
   const dateKey = match[1];
 
-  // 🔥 flamme si déjà détectée dans le cache
   if (hotDaysMap[dateKey]) {
-    tdFlame.innerHTML = `<span class="flame" title="Brûleur actif ce jour-là">🔥</span>`;
+    addFlame(tdFlame);
   } else {
-    // 🕓 attente de la fin du scan → on vérifie à nouveau après 1 seconde
     setTimeout(() => {
-      if (hotDaysMap[dateKey]) {
-        tdFlame.innerHTML = `<span class="flame" title="Brûleur actif ce jour-là">🔥</span>`;
-      }
+      if (hotDaysMap[dateKey]) addFlame(tdFlame);
     }, 1000);
   }
 }
+
+// 📝 Ajoute une icône si un JSON de la même date est présent (persiste même après réaffichage)
+if (match && jsonDates.has(match[1])) {
+  addNote(tdFlame);
+  tdFlame.dataset.hasNote = "true"; // marquage persistant
+}
+
 
 
 
@@ -852,9 +929,23 @@ for (let i = 1; i < lines.length; i++) {
 
 
 if (countFlame >= 1) {
+  // 🔥 Ajoute la flamme tout en préservant la note existante
+  const hadNote = tdFlame.innerHTML.includes("📝");
   tdFlame.innerHTML = `<span class="flame" title="Brûleur actif détecté ce jour !">🔥</span>`;
+  if (hadNote) tdFlame.innerHTML += ` <span class="note" title="Note associée">📝</span>`;
 }
+
+
+// 📝 Si un JSON de la même date existe → conserver même si scan flamme réécrit
+const mNote = f.name.match(/(\d{8})\.csv$/i);
+if (mNote && jsonDates.has(mNote[1])) {
+  if (!tdFlame.innerHTML.includes("📝")) addNote(tdFlame);
+  tdFlame.dataset.hasNote = "true";
+}
+
+
 tdName.textContent = f.name;
+
 
     } catch(e) {
       console.error("Erreur flamme fichier:", f.name, e);
@@ -1450,6 +1541,9 @@ if (last) {
 </script>
 </body>
 </html>
+
+
+
 
 
 
