--- a/index03.html
+++ b/index03.html
@@ -61,9 +61,12 @@ body{
 @keyframes flicker{0%,100%{transform:scale(1)}50%{transform:scale(1.1)}}
 
 /* ===== Titre date/heure ===== */
-#datetimeLabel{
-  font-weight:bold; font-size:18px; text-align:center; color:var(--danger);
-  margin:8px auto 6px;
+#datetimeLabel {
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+  color: var(--danger);
+  margin: 10px auto 20px; /* ⬅️ augmenté pour espacer avant les tuiles */
 }
 
 /* ===== PAGE LAYOUT : main (3/4) + side (1/4) ===== */
@@ -95,10 +98,15 @@ body{
   overflow:hidden;  /* ✅ pas de scrollbar dans la zone tuiles */
 }
 
-#grid{
-  display:flex; flex-direction:column; align-items:center; justify-content:center;
-  gap: calc(var(--tile-size) * var(--split-gap)); /* espace vertical entre top/bottom */
+#grid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: calc(var(--tile-size) * var(--split-gap));
+  margin-bottom: 16px; /* ⬅️ espace après la grille complète */
 }
+
 
 /* Sous-grilles 22 colonnes chacune */
 .grid-part{
@@ -133,10 +141,16 @@ body{
 }
 
 /* ===== Sidebar temporelle (en dessous de la grille) ===== */
-#bottomBar{
-  display:flex; align-items:center; justify-content:center; gap:16px;
-  padding:10px 0 14px;
+#bottomBar {
+  display: flex;
+  flex-direction: column; /* ⬅️ les éléments passent en colonne */
+  align-items: center;
+  justify-content: center;
+  gap: 12px; /* ⬅️ espace vertical entre le slider et le scaleBox */
+  padding: 10px 0 14px;
 }
+
+
 #timeBar{
   width: calc(var(--timebar-cols) * var(--tile-size) + (var(--timebar-cols) - 1) * var(--cell-gap));
   display:flex; align-items:center; justify-content:center;
@@ -357,17 +371,18 @@ body{
     </div>
 
     <!-- ===== Sidebar temporelle + min/max ===== -->
-    <div id="bottomBar">
-      <div id="timeBar">
-        <input type="range" id="slider" min="0" max="0" value="0"/>
-      </div>
-      <div id="scaleBox" title="Réglage des bornes couleurs">
-        <label>Min</label><input type="number" id="minInput" step="0.1" value="30"/>
-        <label style="margin-left:10px;">Max</label><input type="number" id="maxInput" step="0.1" value="60"/>
-      </div>
-      <!-- Bouton optionnel plus tard : Fusion jours (désactivé par défaut) -->
-      <!-- <button id="mergeDaysBtn" style="margin-left:12px;">Fusionner jours</button> -->
+<div id="bottomBar">
+  <div id="timeBar">
+    <input type="range" id="slider" min="0" max="0" value="0"/>
+  </div>
+  <div id="scaleBoxWrap">
+    <div id="scaleBox" title="Réglage des bornes couleurs">
+      <label>Min</label><input type="number" id="minInput" step="0.1" value="30"/>
+      <label style="margin-left:10px;">Max</label><input type="number" id="maxInput" step="0.1" value="60"/>
     </div>
+  </div>
+</div>
+
   </div>
 
   <!-- ===== SIDE (Z3 EVENTS) ===== -->
@@ -1025,7 +1040,7 @@ if (currentDay) mergedDays.add(currentDay);
   );
 
   const minInit = parseFloat(localStorage.getItem("scaleMin") || "30");
-  const maxInit = parseFloat(localStorage.getItem("scaleMax") || "60");
+  const maxInit = parseFloat(localStorage.getItem("scaleMax") || "55");
   document.getElementById("minInput").value = isNaN(minInit) ? 30 : minInit;
   document.getElementById("maxInput").value = isNaN(maxInit) ? 60 : maxInit;
 
@@ -1481,6 +1496,11 @@ async function mergeZ3ForDay(dayStr) {
 </script>
 </body>
 </html>
+
+
+
+
+
 
 
 
