--- a/index.html
+++ b/index.html
@@ -265,6 +265,61 @@ tbody tr:hover .action-btn{opacity:1;visibility:visible;}
   box-shadow:0 2px 8px rgba(0,0,0,0.2);
 }
 
+/* === Bouton Gaz (toujours visible, jaune) === */
+.gaz-btn {
+  background: linear-gradient(180deg, #ffd54f, #ffb300);
+  color: fcdc12;
+  border: none;
+  font-weight: bold;
+  padding: 6px 12px;
+  border-radius: 6px;
+  font-size: 12px;
+  margin-right: 6px;
+  cursor: default;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+  opacity: 1 !important;
+  visibility: visible !important;
+}
+
+.gaz-btn:nth-of-type(2) {
+  background: linear-gradient(180deg, #bbdefb, #64b5f6); /* bleu clair */
+  color: #0d47a1;
+}
+
+/* Conteneur des boutons gaz */
+.gaz-group {
+  display: flex;
+  justify-content: center;   /* centrage horizontal */
+  align-items: center;       /* centrage vertical */
+  gap: 12px;                 /* espace entre les deux boutons */
+  width: 100%;
+}
+
+/* Style général des boutons gaz */
+.gaz-btn {
+  background: linear-gradient(180deg, #ffd54f, #ffb300);
+  color: #5d4037;
+  border: none;
+  font-weight: bold;
+  padding: 8px 14px;
+  border-radius: 8px;
+  font-size: 14px;
+  cursor: default;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+  opacity: 1 !important;
+  visibility: visible !important;
+  text-align: center;
+  transition: transform 0.3s ease, background 0.3s ease;
+  min-width: 110px;          /* largeur fixe pour un alignement parfait */
+}
+
+/* Deuxième bouton (heures) : bleu clair */
+.gaz-group .gaz-btn:nth-of-type(2) {
+  background: linear-gradient(180deg, #bbdefb, #64b5f6);
+  color: #0d47a1;
+}
+
+
 
 </style>
 </head>
@@ -989,6 +1044,118 @@ if(f.name.toLowerCase().endsWith('.csv')){
   }
 }
 
+// === Si on est dans "Consommation Gaz", calcul du delta sur colonnes 2 (heure HH:MM:SS) et 3 (kWh) ===
+if (folderName.toLowerCase().includes("consommation gaz") && f.name.toLowerCase().endsWith(".csv")) {
+html += `
+  <div class="gaz-group">
+    <button class="gaz-btn" disabled>⏳ Calcul...</button>
+    <button class="gaz-btn" disabled>⏳ Heures...</button>
+  </div>
+`;
+
+
+  (async () => {
+    try {
+      const resGaz = await fetch(
+        `https://smes21540.netlify.app/.netlify/functions/drive?id=${f.id}&name=${encodeURIComponent(f.name)}&site=Smes_Acces`
+      );
+      const textGaz = await resGaz.text();
+      const lines = textGaz.split(/\r?\n/).filter(l => l.trim() !== "");
+
+      let diffKwh = 0;
+      let diffMinutes = 0;
+
+      if (lines.length > 2) {
+        const firstCols = lines[1].split(",");
+        const lastCols = lines[lines.length - 1].split(",");
+
+        // --- Colonne 2 : heure (format HH:MM:SS)
+        const hStart = firstCols[1]?.replace(/"/g, "").trim();
+        const hEnd = lastCols[1]?.replace(/"/g, "").trim();
+
+        function parseHeureToMinutes(h) {
+          const m = h.match(/^(\d{1,2}):(\d{2})(?::(\d{2}))?$/);
+          if (!m) return NaN;
+          const hh = parseInt(m[1]);
+          const mm = parseInt(m[2]);
+          const ss = parseInt(m[3] || "0");
+          return hh * 60 + mm + ss / 60;
+        }
+
+        const startMin = parseHeureToMinutes(hStart);
+        const endMin = parseHeureToMinutes(hEnd);
+
+        if (isFinite(startMin) && isFinite(endMin)) {
+          diffMinutes = endMin - startMin;
+          if (diffMinutes < 0) diffMinutes += 24 * 60; // passage minuit
+        }
+
+        // --- Colonne 3 : compteur kWh ---
+        const vCfirst = parseFloat(firstCols[2]?.replace(/"/g, "").trim());
+        const vClast = parseFloat(lastCols[2]?.replace(/"/g, "").trim());
+        if (isFinite(vCfirst) && isFinite(vClast)) diffKwh = vClast - vCfirst;
+      }
+
+      if (!isFinite(diffKwh) || diffKwh < 0) diffKwh = 0;
+      if (!isFinite(diffMinutes) || diffMinutes < 0) diffMinutes = 0;
+
+      // Conversion minutes → HH:MM
+      const hours = Math.floor(diffMinutes / 60);
+      const minutes = Math.floor(diffMinutes % 60);
+      const hh = String(hours).padStart(2, "0");
+      const mm = String(minutes).padStart(2, "0");
+      const dureeFormatee = `${hh}:${mm}`;
+
+      const roundedKwh = diffKwh.toFixed(0);
+
+      const btns = tdAction.querySelectorAll(".gaz-btn");
+      const btnKwh = btns[0];
+      const btnHeures = btns[1];
+
+      // ⚡ KWH
+      if (btnKwh) {
+        btnKwh.textContent = `🔥 ${roundedKwh} kWh`;
+
+        const minScale = 0.85, maxScale = 1.4;
+        const normalized = Math.min(Math.max(diffKwh / 200000, 0), 1);
+        const scale = minScale + (maxScale - minScale) * normalized;
+        btnKwh.style.transform = `scale(${scale.toFixed(2)})`;
+        btnKwh.style.transition = "transform 0.6s ease-out";
+
+        if (diffKwh > 100000) {
+          btnKwh.style.background = "linear-gradient(180deg, #ffcc80, #f57c00)";
+          btnKwh.style.color = "#3e2723";
+        } else if (diffKwh > 50000) {
+          btnKwh.style.background = "linear-gradient(180deg, #ffe082, #ffb300)";
+          btnKwh.style.color = "#4e342e";
+        } else {
+          btnKwh.style.background = "linear-gradient(180deg, #fff176, #ffd54f)";
+          btnKwh.style.color = "#5d4037";
+        }
+      }
+
+      // ⏱ HEURES (format HH:MM)
+      if (btnHeures) {
+        btnHeures.textContent = `⏱ ${dureeFormatee}`;
+        btnHeures.style.background = "linear-gradient(180deg, #bbdefb, #64b5f6)";
+        btnHeures.style.color = "#0d47a1";
+        btnHeures.style.transform = "scale(0.95)";
+      }
+
+    } catch (e) {
+      console.warn("Erreur calcul Consommation Gaz :", f.name, e);
+      const btns = tdAction.querySelectorAll(".gaz-btn");
+      if (btns[0]) btns[0].textContent = "⚡ 0 kWh";
+      if (btns[1]) btns[1].textContent = "⏱ 00:00";
+    }
+  })();
+}
+
+
+
+
+
+
 
 
     if(/\.(jpg|jpeg)$/i.test(f.name)){
@@ -1541,14 +1708,5 @@ if (last) {
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
 
 
